# libanimeditor

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  color.h  grapicsstate.h  keyframe.hpp  pixel.h  pixelgraphic.h  pixelmatrix.cpp  pixelmatrix.h  pixelquartet.h  timeline.hpp  vec2.h
include/: color.h  grapicsstate.h  keyframe.hpp  pixel.h  pixelgraphic.h  pixelmatrix.h  pixelquartet.h  timeline.hpp
src/: color.cpp  color.h  pixelmatrix.cpp  pixelquartet.cpp
test/: test_color.cpp  test_pixel.cpp
